k8s/core/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-platform
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: development
